# leipzigHelpsUkraine_bot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README-TECHNICAL.md  README.md  TECHNICAL.md  docker-compose.yaml  index.js  justfile  main.py  package-lock.json  package.json  pyproject.toml  requirements  requirements.txt  shrinkwrap.yaml  translations.js
assets/: config.yaml  language.yaml
models/: README.md  config.yaml  tests-schema.yaml
setup/: config.yaml
src/: app.js  app.py  main.js  package-lock.json  package.json
src/api/: __init__.py  posts.py
src/application/: app.js  listeners.js  menus.js
src/behaviour/actions/: __init__.py  basic.py  special.py  universal.py
src/classes/: language.js
src/core/: calls.py  dataclasses.py  env.py  log.py  log_special.py  logging.js  trace.py  utils.js  utils.py
src/models/: callcontext.js  message.js  operations.js  secrets.js  trace.js  users.js
src/parts/: actions.js  actions_basic.js  actions_special.js  app.js  listeners.js  menus.js  operations.js  parameters.js  users.js
src/settings/: config.js  config.yaml
src/setup/: arguments.js  comms.js  config.js  config.py  config.yaml  env.py
templates/: .env
tests/: README.md  conftest.py  intialise.py
tests/core/: logging.test.js  utils.test.js
tests/integration/: conftest.py  test_app.py
tests/setup/: arguments.test.js
tests/test_core/: conftest.py  test_calls.py  test_utils.py
tests_integration/: README.md  conftest.py  intialise.py  test_app.py
tests_integration/setup/: environment.py
(+27 files in other folders)
